<resources>
    <string name="app_name">QuickBite</string>
    <string name="icon">TODO</string>
    <string name="get_started">Get Started</string>
    <string name="welcome">Welcome to QuickBite!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create new Account?</string>
    <string name="create">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="addrss">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="messages">Messages</string>
    <string name="me">Me</string>
    <string name="hi">Hi</string>
    <string name="your_available_items">Your Available Foods</string>
    <string name="burger">burger</string>
    <string name="add_new_products">Add New Foods</string>
    <string name="products_picture">Foods Picture</string>
    <string name="product_name">Foods Name</string>
    <string name="description">Description</string>
    <string name="acro_name">Acro Name</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="zero">0</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="peso_sign">₱</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="my_cart">My Cart</string>
    <string name="items_total">Items Total</string>
    <string name="delivery_services">Delivery Services</string>
    <string name="payment_option">Payment Option</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="total">Total</string>
    <string name="checkout">CheckOut</string>
    <string name="medium">Medium</string>
    <string name="regular">Regular</string>
    <string name="large">Large</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="nice_spice"><![CDATA[Nice & Spice]]></string>
    <string name="mission">Our goal is to make healthy eating a part of every day life. In other words, we go above and beyond to make your experience unforgettable, going above and beyond to just deliver. And that means you can eat this amazing cuisine every day, whatever you craving for a decadent family dinner or date night in.</string>
    <string name="vission">to be the favorite food ordering and delivery service around San Jose, Occidental Mindoro.</string>
</resources>