<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_marginTop="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/burger"
            android:scaleType="fitXY"
            android:id="@+id/food_pic"
            android:contentDescription="@string/app_name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:id="@+id/foodName"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:id="@+id/foodDescription"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Quantity"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:id="@+id/foodQuantity"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peso_sign"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:id="@+id/foodPrice"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/baseline_remove_shopping_cart_24"
                app:iconTint="@color/red"
                android:textColor="@color/red"
                android:text="Cancel Order"
                android:layout_gravity="end"
                android:textSize="12sp"
                android:fontFamily="@font/alata"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>