<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_activity">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/gradient_bg"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/quickbitelogo"
            android:layout_gravity="center"
            android:contentDescription="@string/icon"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/userman"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/userman"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_layout"
        android:layout_marginTop="-40dp"
        android:contentDescription="@string/icon"/>

    <TextView
        android:id="@+id/welcome_lbl"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/userman"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/alata"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="9pt" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_lbl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            android:layout_width="match_parent"
            app:endIconMode="clear_text"
            app:boxStrokeColor="#67A0C3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            android:layout_width="match_parent"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="#67A0C3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="@font/alata"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/loginBtn"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            app:strokeColor="#87CEFA"
            android:textColor="#87CEFA"
            app:cornerRadius="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/login"
            android:textSize="10pt"
            android:fontFamily="@font/alata"/>

        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/signupBtn"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:textColor="#858687"
            app:cornerRadius="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/create_new_account"
            android:textSize="6pt"
            android:fontFamily="@font/alata"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>