<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".food_add_to_cart">

    <include
        android:id="@+id/main_page_toolbar"
        layout="@layout/white_toolbar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

    </include>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/main_page_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acro_name"
            android:textAlignment="center"
            android:fontFamily="@font/alata"
            android:textSize="25sp"
            android:textColor="#546E7A"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:id="@+id/aName"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/burger"
            android:scaleType="fitCenter"
            android:id="@+id/food_pic"
            android:contentDescription="@string/icon"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peso_sign"
            android:fontFamily="@font/alata"
            android:textSize="12pt"
            android:textColor="#546E7A"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:id="@+id/fPrice"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                app:cardBackgroundColor="#88CFFB"
                android:id="@+id/decreaseBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:scaleType="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_remove_24"
                        android:contentDescription="@string/icon"
                        app:tint="#fff" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:fontFamily="@font/alata"
                android:textStyle="bold"
                android:textSize="14pt"
                android:textColor="#546E7A"
                android:id="@+id/quantity_tb"/>

            <androidx.cardview.widget.CardView
                app:cardBackgroundColor="#88CFFB"
                android:id="@+id/increaseBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:scaleType="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_add_24"
                        android:contentDescription="@string/icon"
                        app:tint="#fff" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:fontFamily="@font/alata"
            android:textSize="20sp"
            android:textColor="#546E7A"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:id="@+id/fDescription"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/btAdd"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            app:strokeColor="#87CEFA"
            app:cornerRadius="5dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:layout_gravity="center"
            android:text="@string/add_to_cart"
            android:textColor="#87CEFA"
            app:iconTint="#87CEFA"
            app:icon="@drawable/ic_baseline_shopping_cart_24"
            app:iconSize="30dp"
            android:textSize="10pt"
            android:fontFamily="@font/alata"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>