<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/burger"
            android:scaleType="fitXY"
            android:id="@+id/food_image"
            android:contentDescription="@string/icon"/>

        <LinearLayout
            android:background="#EF3939"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/burger"
                android:fontFamily="@font/baloo"
                android:textSize="22sp"
                android:textStyle="bold"
                android:lines="1"
                android:ems="3"
                android:singleLine="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:id="@+id/food_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/burger"
                android:fontFamily="@font/comfortaa"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:id="@+id/food_aname"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peso_sign"
                android:fontFamily="@font/comfortaa"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:id="@+id/food_price"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>